webextensions/sidebar/styles/base.css
/* ... */
/* contextual identity (aka Container Tab) */

.contextual-identity-marker {
  --contextual-identity-marker-width: calc(var(--favicon-size) / 5.5);
  position: absolute;
  z-index: var(--tab-ui-z-index);

  tab-item:not(.faviconized) & {
    --contextual-identity-marker-margin: min(calc((var(--tab-current-size) - var(--favicon-size)) / 2), calc(var(--tab-current-size) * 0.15));
    bottom: var(--contextual-identity-marker-margin);
    inset-inline-end: 0;
    top: var(--contextual-identity-marker-margin);
    width: var(--contextual-identity-marker-width);
  }

  tab-item.faviconized & {
    --contextual-identity-marker-margin: min(calc((var(--tab-current-size) - var(--favicon-size)) / 2), calc(var(--tab-current-size) * 0.33));
    bottom: 0;
    height: var(--contextual-identity-marker-width);
    inset-inline-start: var(--contextual-identity-marker-margin);
    inset-inline-end: var(--contextual-identity-marker-margin);
  }
}



/* tab groups */

tab-item[type="group"] {
  tab-twisty,
  tab-favicon,
  tab-closebox,
  .highlighter,
  .contextual-identity-marker {
    display: none;
  }

  .caption {
    border: 1px solid var(--tab-border);
    height: calc(var(--tab-size) * 0.7);
    background-color: var(--tab-surface);
    background-image: var(--tab-surface-bgimage);
    max-width: calc(max(var(--tab-label-width), calc(var(--favicon-size) / 2)) +
                    0.25em /* margin-inline of tab-label */);
  }

  tab-label {
    font-weight: bold;
  }

  .caption,
  tab-item-substance:hover .caption {
    --tab-surface: light-dark(var(--tab-group-color), var(--tab-group-color-invert)) !important;
    --tab-border: light-dark(var(--tab-group-color), var(--tab-group-color-invert)) !important;
    --tab-text: light-dark(var(--tab-group-color-pale), var(--tab-group-label-text-dark)) !important;
  }

  &.subtree-collapsed {
    .caption,
    tab-item-substance:hover .caption {
      --tab-surface: light-dark(var(--tab-group-color-pale), var(--tab-group-color)) !important;
      --tab-text: light-dark(var(--tab-group-color), var(--tab-group-color-pale)) !important;
    }
  }
}

tab-item[data-group-id]:not([data-group-id="-1"]) {
  --space-xsmall: 0.267rem; /* https://searchfox.org/mozilla-central/rev/7d73613454bfe426fdceb635b33cd3061a69def4/toolkit/themes/shared/design-system/tokens-shared.css#273 */
  --space-xxsmall: calc(0.5 * var(--space-xsmall)); /* https://searchfox.org/mozilla-central/rev/7d73613454bfe426fdceb635b33cd3061a69def4/toolkit/themes/shared/design-system/tokens-shared.css#272 */
  --space-medium: calc(3 * var(--space-xsmall)); /* https://searchfox.org/mozilla-central/rev/7d73613454bfe426fdceb635b33cd3061a69def4/toolkit/themes/shared/design-system/tokens-shared.css#275 */
  --tab-group-member-indent: var(--space-medium); /* https://searchfox.org/mozilla-central/rev/7d73613454bfe426fdceb635b33cd3061a69def4/browser/themes/shared/tabbrowser/tabs.css#1016 */
  --tab-group-line-color: light-dark(var(--tab-group-color), var(--tab-group-color-invert));

  .native-tab-group-line {
    background: var(--tab-group-line-color);
    display: block;
    max-width: 2px;
    min-width: 2px;
    opacity: 1;
  }
  &.collapsed .native-tab-group-line {
    opacity: 0;
  }
  &.animation-ready .native-tab-group-line {
    transition: var(--tab-indent-positioning-animation),
                opacity var(--collapse-animation);
  }
}

.native-tab-group-line {
  :root:not(.rtl).left &,
  :root.rtl.right & {
    inset-inline-start: calc(var(--tab-group-member-indent) * 0.5);
    inset-inline-end: auto;
  }

  :root:not(.rtl).right &,
  :root.rtl.left & {
    inset-inline-start: auto;
    inset-inline-end: calc(var(--tab-group-member-indent) * 0.5);
  }
}

tab-item[type="group-collapsed-members-counter"] {
  tab-twisty,
  tab-favicon,
  tab-closebox,
  .highlighter,
  .contextual-identity-marker {
    display: none;
  }

  &,
  &:hover,
  tab-item-substance,
  tab-item-substance:hover {
    --tab-surface: transparent !important;
    --tab-border: transparent !important;
    --tab-text: light-dark(var(--tab-group-color), var(--tab-group-color-pale)) !important;
  }
}


/* non-tab items */

#tabbar-top,
#tabbar-bottom,
#tabbar ~ .after-tabs {
  height: 0;
  inset-inline-start: 0;
  inset-inline-end: 0;
  overflow: visible;
  position: absolute;
  z-index: var(--over-tabs-z-index);
}

#tabbar-top {
  top: 0;
}

#tabbar-bottom {
  bottom: 0;
  justify-content: flex-end;
  top: auto;
}

.after-tabs {
  #tabbar.overflow &,
  #tabbar:not(.overflow) ~ & {
    display: none;
  }

  #tabbar ~ & {
    bottom: var(--tabbar-bottom-area-size);
    justify-content: flex-end;
  }

  .newtab-action-selector-anchor,
  .contextual-identities-selector-anchor {
    background: none;
    bottom: 0;
    color: var(--tab-text);
    display: none;
    max-width: var(--new-tab-button-anchor-size);
    opacity: 0;
    overflow: hidden;
    padding-block: calc((var(--new-tab-button-anchor-size) - var(--svg-small-icon-size)) / 2);
    padding-inline: calc((var(--new-tab-button-anchor-size) - var(--svg-small-icon-size)) / 2);
    pointer-events: none;
    position: absolute;
    top: 0;
    transition: opacity var(--collapse-animation);
    z-index: var(--over-buttons-z-index);
  }
}


.newtab-button-box {
  position: relative;
}

.newtab-button {
  background: none transparent;
  margin-block: 0;
  margin-inline: 0;
  text-align: center;

  &::after {
    -moz-context-properties: fill;
    background: url("./icons/new-16.svg") no-repeat center / 100%;
    content: "";
    display: inline-block;
    fill: var(--tab-text);
    height: var(--svg-small-icon-size);
    opacity: var(--button-opacity);
    width: var(--svg-small-icon-size);
  }
  :root.simulate-svg-context-fill &::after {
    background: var(--tab-text);
    mask: url("./icons/new-16.svg") no-repeat center / 100%;
  }

  &:hover::before {
    opacity: var(--button-hover-opacity);
  }
}
/* ... */

